--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next-http-backend": "^2.2.0",
     "js-cookie": "^3.0.5",
     "next": "13.3.0",
+    "next-pwa": "^5.6.0",
     "owl.carousel": "^2.3.4",
     "postcss": "8.4.21",
     "react": "18.2.0",
